--- a/sass/main.scss
+++ b/sass/main.scss
@@ -55,7 +55,7 @@ header {
 /*------------------------------------------------*/
 
 /* Barre de recherche */
-.recherche {
+.recherche-principal-container {
   margin-bottom: 25px;
 }
 
@@ -84,52 +84,54 @@ header {
 }
 
 /* Filtre */
-.filtre {
+.recherche-secondaires-container {
   margin-bottom: 25px;
-}
-.dropdown {
   display: flex;
-  &__bouton {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 170px;
-    height: 69px;
-    font-family: "lato", "roboto", sans-serif;
-    font-weight: 700;
+}
+.recherche-secondaires {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-inline: 20px;
+  width: 170px;
+  height: 69px;
+  font-family: "lato", "roboto", sans-serif;
+  font-weight: 700;
+  border: none;
+  border-radius: 5px;
+  margin-right: 20px;
+  &::after {
+    display: none;
+  }
+  & input {
+    width: 80%;
+    height: 90%;
     border: none;
-    border-radius: 5px;
-    margin-right: 20px;
-    &::after {
+    &::-webkit-search-cancel-button {
       display: none;
     }
-    & input {
-      width: 80%;
-      height: 90%;
-      border: none;
-      &::placeholder {
-        color: white;
-      }
-      &:focus-visible {
-        color: white;
-        outline: none;
-      }
+    &::placeholder {
+      color: white;
+    }
+    &:focus-visible {
+      color: white;
+      outline: none;
     }
   }
 }
-#dropdownMenuButton1 {
+.recherche-par-ingredients {
   background-color: #3282f7;
   & input {
     background-color: #3282f7;
   }
 }
-#dropdownMenuButton2 {
+.recherche-par-appareil {
   background-color: #68d9a4;
   & input {
     background-color: #68d9a4;
   }
 }
-#dropdownMenuButton3 {
+.recherche-par-ustensiles {
   background-color: #ed6454;
   & input {
     background-color: #ed6454;
@@ -151,6 +153,10 @@ header {
     grid-column: span 2;
     grid-row: 1;
     overflow: hidden;
+    object-fit: fill;
+    & img {
+      width: 100%;
+    }
   }
   &__titre {
     grid-column: 1;
