--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,11 @@ header {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
 }
+.cartes h2 {
+  grid-column: 2/2;
+  white-space: nowrap;
+  justify-self: center;
+}
 
 .carte {
   display: grid;
