--- a/sass/main.scss
+++ b/sass/main.scss
@@ -235,6 +235,11 @@ header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
+  h2 {
+    grid-column: 2/2;
+    white-space: nowrap;
+    justify-self: center;
+  }
 }
 .carte {
   display: grid;
