--- a/css/style.css
+++ b/css/style.css
@@ -96,10 +96,11 @@ header {
 
 /* Filtre */
 .filtre {
-  margin-bottom: 25px;
+  margin-bottom: 15px;
 }
 .filtre__container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .element-select {
@@ -142,6 +143,7 @@ header {
   border: none;
   border-radius: 5px;
   margin-right: 20px;
+  margin-bottom: 10px;
 }
 .recherche-secondaires::after {
   display: none;
@@ -164,6 +166,12 @@ header {
   cursor: pointer;
 }
 
+@media (max-width: 399px) {
+  .recherche-secondaires {
+    width: 100%;
+    margin-right: 0px;
+  }
+}
 .rotation-fleche {
   transform: rotate(0.5turn);
 }
@@ -199,6 +207,7 @@ header {
   color: white;
   border-radius: 0 0 5px 5px;
   display: none;
+  z-index: 100;
 }
 .liste__element {
   font-family: "lato", "roboto", sans-serif;
@@ -210,6 +219,9 @@ header {
   white-space: nowrap;
   overflow: hidden;
   cursor: pointer;
+}
+.liste p {
+  padding-left: 20px;
 }
 
 .liste-ingredients {
@@ -240,9 +252,9 @@ header {
   gap: 40px;
 }
 .cartes h2 {
-  grid-column: 2/2;
   white-space: nowrap;
-  justify-self: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .carte {
@@ -262,11 +274,12 @@ header {
   width: 100%;
 }
 .carte__titre {
-  grid-column: 1;
+  grid-column: 1/3;
   grid-row: 2;
+  width: 65%;
   font-size: 1.125rem;
   align-self: center;
-  margin-left: 5%;
+  margin-left: 2.5%;
 }
 .carte__duree {
   grid-column: 2;
@@ -294,6 +307,17 @@ header {
 }
 .carte__recette--police {
   font-family: "roboto", "lato", sans-serif;
+}
+
+@media (max-width: 1048px) {
+  .cartes {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 768px) {
+  .cartes {
+    grid-template-columns: 1fr;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
