--- a/sass/main.scss
+++ b/sass/main.scss
@@ -92,9 +92,10 @@ header {
 
 /* Filtre */
 .filtre {
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   &__container {
     display: flex;
+    flex-wrap: wrap;
   }
 }
 
@@ -138,6 +139,7 @@ header {
   border: none;
   border-radius: 5px;
   margin-right: 20px;
+  margin-bottom: 10px;
   &::after {
     display: none;
   }
@@ -158,6 +160,12 @@ header {
   }
   & img {
     cursor: pointer;
+  }
+}
+@media (max-width: 399px) {
+  .recherche-secondaires {
+    width: 100%;
+    margin-right: 0px;
   }
 }
 
@@ -194,6 +202,7 @@ header {
   color: white;
   border-radius: 0 0 5px 5px;
   display: none;
+  z-index: 100;
   &__element {
     font-family: "lato", "roboto", sans-serif;
     font-weight: 400;
@@ -204,6 +213,9 @@ header {
     white-space: nowrap;
     overflow: hidden;
     cursor: pointer;
+  }
+  & p {
+    padding-left: 20px;
   }
 }
 .liste-ingredients {
@@ -236,9 +248,9 @@ header {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
   h2 {
-    grid-column: 2/2;
     white-space: nowrap;
-    justify-self: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 .carte {
@@ -257,11 +269,12 @@ header {
     }
   }
   &__titre {
-    grid-column: 1;
+    grid-column: 1/3;
     grid-row: 2;
+    width: 65%;
     font-size: 1.125rem;
     align-self: center;
-    margin-left: 5%;
+    margin-left: 2.5%;
   }
   &__duree {
     grid-column: 2;
@@ -289,5 +302,15 @@ header {
     &--police {
       font-family: "roboto", "lato", sans-serif;
     }
+  }
+}
+@media (max-width: 1048px) {
+  .cartes {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 768px) {
+  .cartes {
+    grid-template-columns: 1fr;
   }
 }
